# freakonomics

./: .gitignore  CLAUDE.md  README.en.md  README.md  README_USAGE.md  pyproject.toml  simple_downloader.py
freakonomics_dl/: __init__.py  cli.py  curated.py  downloader.py  episode.py  http_client.py  interactive.py  names.py  probe.py  progress.py  rss.py  rss_downloader.py
tests/: test_rss.py
