[tool.poetry]
name = "freakonomics-transcript-downloader"
version = "0.1.0"
description = "Download transcripts from Freakonomics podcast episodes"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.40.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.1.0"
browser-cookie3 = "^0.20.1"
requests = "^2.32.5"
undetected-chromedriver = "^3.5.5"
selenium = "^4.40.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
