[tool.poetry]
name = "freakonomics-transcript-downloader"
version = "0.2.0"
description = "Download Freakonomics podcast audio and transcripts (HTTP-first)"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "freakonomics_dl" }]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.0"
lxml = "^5.1.0"
requests = "^2.32.5"
# Optional / legacy (simple_downloader.py browser path)
playwright = { version = "^1.40.0", optional = true }

[tool.poetry.extras]
browser = ["playwright"]

[tool.poetry.scripts]
freakonomics-dl = "freakonomics_dl.cli:main"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
